# spectral-policy-analysis

./: jpegify.py  mise.toml  pyproject.toml  spectral_app.py
