[project]
name = "spectral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

[tool.ruff.lint]
select = ["C90", "E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.isort]
force-sort-within-sections = true
